2006-01-16  Richard A. Stellingwerff  <remenic@gmail.com>

	* NEWS:
	* configure.ac:

	Updated for 2.7.3
	
2006-01-15  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_resize_grip):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c: (draw_resize_grip):
	* engines/clearlooks/src/clearlooks_types.h:

	Added the resize grip.

2006-01-15  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menuitem):
	
	Fixed memory leak.

2006-01-12  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	
	Don't draw the shadow on vertical toolbars.

2006-01-12  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (scale_or_ref):
	
	Add missing function for icon transparency patch.

2006-01-12  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (set_transparency),
	(render_icon), (clearlooks_style_class_init):
	
	Applied icon transparency patch again.

2006-01-12	Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_menuitem):
	
	New-old menuitem style.
	
	* engines/clearlooks/src/clearlooks_style.c: (draw_handle):
	
	Fix broken toolbar handle orientation (again).

2006-01-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/lighthouseblue/src/lighthouseblue_style.c: (draw_slider),
	(draw_handle):
	Make sure the clip regions are reset again.

2006-01-05  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Reverted to 'forward motion' animation by default, when
	enabled. Disabled by default now.

2006-01-05  Richard Stellingwerff  <remenic@gmail.com>
